--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
                 <a class="navbar-brand mr-auto" href="#">Ristorante con Fusion</a>
                 <div class="collapse navbar-collapse" if="Navbar">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-items active"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-items"><a class="nav-link" href="./about.html">About</a></li>
+                        <li class="nav-items "><a class="nav-link" href="./index.html">Home</a></li>
+                        <li class="nav-items active"><a class="nav-link" href="#">About</a></li>
                         <li class="nav-items"><a class="nav-link" href="#">Menu</a></li>
                         <li class="nav-items"><a class="nav-link" href="#">Contact</a></li>
 
@@ -46,7 +46,11 @@
     </header>
 
         <div class="container">
-            <h3><b>The restaurant</b></h3>
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+            </ol>
+            <h3><b>About us</b></h3>
         </div>
          
         
@@ -111,8 +115,8 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
